--- a/GadgetHub/GadgetHub.WebUI/Views/Product/List.cshtml
+++ b/GadgetHub/GadgetHub.WebUI/Views/Product/List.cshtml
@@ -1,19 +1,20 @@
-﻿@using GadgetHub.Domain.Entities
-@model IEnumerable<Product>
+﻿@model GadgetHub.WebUI.Models.ProductsListViewModel
 
-@{
+
+@{ 
     ViewBag.Title = "Products";
 }
 
-@foreach (var p in Model)
+@foreach (var p in Model.Products)
 {
     <div>
         <h3> @p.Name</h3>
         @p.Description
         <h4>@p.Price.ToString("c")</h4>
-        <h4>Category: @p.category</h4>
     </div>
-    <p>-----------------------</p>
 }
 
 
+<div>
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x}))
+</div>
