Updated bootstrap, added remove buttons and cart functionality and heading

--- a/GadgetHub/GadgetHub.WebUI/Views/Shared/_Layout.cshtml
+++ b/GadgetHub/GadgetHub.WebUI/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     @* Navigation bar - displays 'GADGET HUB' title *@
     <div class="navbar navbar-dark bg-dark">
         <a class="navbar-brand ms-4" href="#">GADGET HUB</a>
+        @Html.Action("Summary", "Cart")
     </div>
 
     @* A panel to list the categories *@
