--- a/GadgetHub/GadgetHub.WebUI/Views/Nav/Menu.cshtml
+++ b/GadgetHub/GadgetHub.WebUI/Views/Nav/Menu.cshtml
@@ -13,8 +13,6 @@
         action = "List",
         category = link,
         page = 1 },
-    new { @class = "btn btn-outline-secondary w-100 btn-lg mb-2"
-                    + (link == ViewBag.SelectedCategory ? " active" : "")
-    })
+    new { @class = "btn btn-outline-secondary w-100 btn-lg mb-2" })
 
 }
