--- a/GadgetHub/GadgetHub.WebUI/Views/Shared/ProductSummary.cshtml
+++ b/GadgetHub/GadgetHub.WebUI/Views/Shared/ProductSummary.cshtml
@@ -9,5 +9,16 @@
     </h3>
 
     <span class="lead"> @Model.Description </span>
+
+    @using (Html.BeginForm("AddToCart", "Cart"))
+    {
+        <div class="float-end">
+            @Html.HiddenFor(x => x.ProductID)
+            @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
+
+            <input type="submit" class="btn btn-success" value="Add to cart" />
+        </div>
+    }
+
 </div>
 
