--- a/GadgetHub/GadgetHub.WebUI/Views/Admin/Index.cshtml
+++ b/GadgetHub/GadgetHub.WebUI/Views/Admin/Index.cshtml
@@ -42,6 +42,6 @@
     </div>
 
     <div class="card-footer">
-        @Html.ActionLink("Add a new product", "Create", null, new { @class = "btn btn_primary" })
+        @Html.ActionLink("Add a new product", "Create", null, new { @class = "btn btn-primary" })
     </div>
 </div>
